--- a/SpacialDB/nbproject/project.properties
+++ b/SpacialDB/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=xz.spacial.SpacialUI
+javafx.main.class=xz.spacial.ui.SpacialUI
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
